--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -8,40 +8,45 @@ interface Props {
   description: string;
   inProgress: boolean;
 }
-const { title, company, location, startDate, endDate, description, inProgress } = Astro.props;
+const {
+  title,
+  company,
+  location,
+  startDate,
+  endDate,
+  description,
+  inProgress,
+} = Astro.props;
 ---
 
 <span
-  class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900"
+  class="absolute flex items-center justify-center w-6 h-6 rounded-full -start-3 ring-8 ring-gray-900 bg-blue-900"
 >
   <svg
-    class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300"
-    aria-hidden="true"
+    class="size-3 text-blue-300"
     xmlns="http://www.w3.org/2000/svg"
+    width="24"
+    height="24"
+    viewBox="0 0 24 24"
     fill="currentColor"
-    viewBox="0 0 20 20"
+    ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+      d="M22 13.478v4.522a3 3 0 0 1 -3 3h-14a3 3 0 0 1 -3 -3v-4.522l.553 .277a20.999 20.999 0 0 0 18.897 -.002l.55 -.275zm-8 -11.478a3 3 0 0 1 3 3v1h2a3 3 0 0 1 3 3v2.242l-1.447 .724a19.002 19.002 0 0 1 -16.726 .186l-.647 -.32l-1.18 -.59v-2.242a3 3 0 0 1 3 -3h2v-1a3 3 0 0 1 3 -3h4zm-2 8a1 1 0 0 0 -1 1a1 1 0 1 0 2 .01c0 -.562 -.448 -1.01 -1 -1.01zm2 -6h-4a1 1 0 0 0 -1 1v1h6v-1a1 1 0 0 0 -1 -1z"
+    ></path></svg
   >
-    <path
-      d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
-    ></path>
-  </svg>
 </span>
-<h3
-  class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white"
->
+<h3 class="flex items-center mb-1 text-lg font-semibold">
   {title}, {company}
   {
     inProgress && (
-      <span
-      class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
-      >Latest</span>
+      <span class="text-sm font-medium me-2 px-2.5 py-0.5 rounded bg-green-800 ms-3">
+        In progress
+      </span>
     )
   }
 </h3>
-<time
-  class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+<time class="block mb-2 text-sm font-normal leading-none text-gray-500"
   >{location}, from {startDate} to {endDate}</time
 >
-<p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+<p class="mb-4 text-base font-normal text-gray-400">
   {description}
 </p>
