--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
+<header id="top" class="flex justify-between items-center py-3 w-[1120px] mx-auto">
   <img src="/img/adhe-bg.jpg" alt="adhe photo" class="rounded-full w-16 h-16" />
   <nav class="flex flex-row gap-x-10 opacity-80">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/projects">Proyects</a>
-    <a href="/contact">Contact</a>
+    <a href="#top">Home</a>
+    <a href="#experience">Experience</a>
+    <a href="#projects">Proyects</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
