refactor: Update header navigation links

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ const EXPERIENCE = [
     location: 'Remote',
     startDate: '2020',
     endDate: 'Present',
-    description: 'Building the next generation of web applications with a focus on performance and user experience.',
+    description: 'Building the next generation of web applications with a focus on performance and user experience. Building the next generation of web applications with a focus on performance and user experience. Building the next generation of web applications with a focus on performance and user experience.',
     inProgress: true,
   },
   {
@@ -17,7 +17,7 @@ const EXPERIENCE = [
     location: 'Remote',
     startDate: '2018',
     endDate: '2020',
-    description: 'Worked on a variety of projects for clients from all around the world.',
+    description: 'Worked on a variety of projects for clients from all around the world. Building the next generation of web applications with a focus on performance and user experience.',
     inProgress: false,
   },
   {
@@ -26,12 +26,12 @@ const EXPERIENCE = [
     location: 'Remote',
     startDate: '2016',
     endDate: '2018',
-    description: 'Built websites and web applications for small businesses and startups.',
+    description: 'Built websites and web applications for small businesses and startups. Building the next generation of web applications with a focus on performance and user experience.',
     inProgress: false,
   },
 ];
 ---
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-700 ml-3">
   {
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-6">
