--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,7 +34,7 @@ const {
     ></path></svg
   >
 </span>
-<h3 class="flex items-center mb-1 text-lg font-semibold">
+<h3 class="text-white flex items-center mb-1 text-lg font-semibold">
   {title}, {company}
   {
     inProgress && (
@@ -47,6 +47,6 @@ const {
 <time class="block mb-2 text-sm font-normal leading-none text-gray-500"
   >{location}, from {startDate} to {endDate}</time
 >
-<p class="mb-4 text-base font-normal text-gray-400">
+<p class="mb-4 text-base font-normal text-gray-400 text-pretty">
   {description}
 </p>
