--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header id="top" class="flex justify-between items-center py-3 w-[1120px] mx-auto">
+<header id="top" class="text-white flex justify-between items-center py-3 w-[1024px] mx-auto">
   <img src="/img/adhe-bg.jpg" alt="adhe photo" class="rounded-full w-16 h-16" />
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="#top">Home</a>
