--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import CodeIcon from "../components/icons/CodeIcon.astro";
           ><Badge>Available to work</Badge></a
         >
       </h1>
-      <h2 class="text-2xl opacity-80 text-wrap">
+      <h2 class="text-white text-2xl opacity-80 text-wrap">
         Lorem, ipsum dolor sit amet consectetur <span class="text-orange-300/90"
           >adipisicing elit.</span
         > Dolore ad tempora adipisci impedit a iusto sed aspernatur corporis iure
@@ -39,14 +39,14 @@ import CodeIcon from "../components/icons/CodeIcon.astro";
         <Icon href="https://github.com/adhes14">
           <Github class="w-6 h-6" /> GitHub
         </Icon>
-        <Icon href="https://github.com/adhes14">
+        <Icon>
           <Gmail class="w-6 h-6" /> adhemarduran@gmail.com
         </Icon>
       </nav>
     </SectionContainer>
 
     <SectionContainer id="experience">
-      <h2 class="text-2xl font-semibold mb-6 flex gap-x-2 items-center"><CodeIcon class="size-8" /> Work Experience</h2>
+      <h2 class="text-white text-2xl font-semibold mb-6 flex gap-x-2 items-center"><CodeIcon class="size-8" /> Work Experience</h2>
       <Experience />
     </SectionContainer>
   </main>
