--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import CodeIcon from "../components/icons/CodeIcon.astro";
   title="Adhemar's Porfolio - FullStack Developer"
   description="This my website where I can show you how I work"
 >
-  <main>
-    <SectionContainer class="pt-44 pb-20">
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+  <main class="px-3 lg:px-0">
+    <SectionContainer class="pt-32 lg:pt-44 pb-20">
+      <h1 class="text-white text-3xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-10">
         Hi, I'm Adhemar <a
           href="https://www.linkedin.com/in/adhemar-duran-gahuincha/"
           target="_blank"
@@ -25,28 +25,28 @@ import CodeIcon from "../components/icons/CodeIcon.astro";
           ><Badge>Available to work</Badge></a
         >
       </h1>
-      <h2 class="text-white text-2xl opacity-80 text-wrap">
+      <h2 class="text-white text-lg lg:text-2xl opacity-80 text-wrap">
         Lorem, ipsum dolor sit amet consectetur <span class="text-orange-300/90"
           >adipisicing elit.</span
         > Dolore ad tempora adipisci impedit a iusto sed aspernatur corporis iure
         repellat
       </h2>
 
-      <nav class="flex gap-x-4 mt-5">
+      <nav class="flex flex-wrap gap-x-2 gap-y-2 lg:gap-x-4 mt-5">
         <Icon href="https://www.linkedin.com/in/adhemar-duran-gahuincha/">
-          <LinkedIn class="w-6 h-6" /> LinkedIn
+          <LinkedIn class="size-4 lg:size-6" /> LinkedIn
         </Icon>
         <Icon href="https://github.com/adhes14">
-          <Github class="w-6 h-6" /> GitHub
+          <Github class="size-4 lg:size-6" /> GitHub
         </Icon>
         <Icon>
-          <Gmail class="w-6 h-6" /> adhemarduran@gmail.com
+          <Gmail class="size-4 lg:size-6" /> adhemarduran@gmail.com
         </Icon>
       </nav>
     </SectionContainer>
 
     <SectionContainer id="experience">
-      <h2 class="text-white text-2xl font-semibold mb-6 flex gap-x-2 items-center"><CodeIcon class="size-8" /> Work Experience</h2>
+      <h2 class="text-white text-xl lg:text-2xl font-semibold mb-6 flex gap-x-2 items-center"><CodeIcon class="size-6 lg:size-8" /> Work Experience</h2>
       <Experience />
     </SectionContainer>
   </main>
