improve text content

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,30 +3,30 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    title: 'Senior Frontend Developer',
-    company: 'Flowbite',
+    title: 'Fullstack Developer',
+    company: 'Algoritmos',
     location: 'Remote',
-    startDate: '2020',
+    startDate: 'Sep 2023',
     endDate: 'Present',
-    description: 'Building the next generation of web applications with a focus on performance and user experience. Building the next generation of web applications with a focus on performance and user experience. Building the next generation of web applications with a focus on performance and user experience.',
+    description: 'Maintain the system interface and optimize the user experience to be intuitive and engaging, manage the backend logic, database, and its integration with the frontend ensuring efficient operation, and debug and resolve code issues to maintain software quality and stability.',
     inProgress: true,
   },
   {
-    title: 'Frontend Developer',
-    company: 'Upwork',
+    title: 'Fullstack Developer',
+    company: 'Freelance',
     location: 'Remote',
-    startDate: '2018',
-    endDate: '2020',
-    description: 'Worked on a variety of projects for clients from all around the world. Building the next generation of web applications with a focus on performance and user experience.',
+    startDate: 'Jan 2022',
+    endDate: 'Aug 2023',
+    description: 'Design, develop, and maintain user-friendly, functional, and secure websites and web applications for small businesses and startups, write well-structured and efficient code using HTML, CSS, JavaScript, and PHP, and collaborate with other developers, designers, and clients to ensure the quality and usability of web products.',
     inProgress: false,
   },
   {
-    title: 'Web Developer',
-    company: 'Freelancer',
+    title: 'QA Automation Intern',
+    company: 'Jalasoft',
     location: 'Remote',
-    startDate: '2016',
-    endDate: '2018',
-    description: 'Built websites and web applications for small businesses and startups. Building the next generation of web applications with a focus on performance and user experience.',
+    startDate: 'Jan 2023',
+    endDate: 'Apr 2023',
+    description: 'Design, develop, and execute automated tests for software applications, ensure the software meets quality standards and requirements, and troubleshoot and report any issues or defects found during the testing process.',
     inProgress: false,
   },
 ];
