--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,7 @@ import CodeIcon from "../components/icons/CodeIcon.astro";
         >
       </h1>
       <h2 class="text-white text-lg lg:text-2xl opacity-80 text-wrap">
-        Lorem, ipsum dolor sit amet consectetur <span class="text-orange-300/90"
-          >adipisicing elit.</span
-        > Dolore ad tempora adipisci impedit a iusto sed aspernatur corporis iure
-        repellat
+        I'm passionate about software development, specializing in <span class="text-orange-300/90">Web Development</span>. With a solid foundation and experience in various technologies, I am dedicated to crafting high-quality, reliable web applications. I pride myself on being <span class="text-orange-300/90">highly adaptable</span> and capable of <span class="text-orange-300/90">quickly learning</span> new technologies and processes. This adaptability allows me to continuously improve my skill set.
       </h2>
 
       <nav class="flex flex-wrap gap-x-2 gap-y-2 lg:gap-x-4 mt-5">
