--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,7 +34,7 @@ const {
     ></path></svg
   >
 </span>
-<h3 class="text-white flex items-center mb-1 text-md lg:text-lg font-semibold">
+<h3 class="text-blue-200 flex items-center mb-1 text-md lg:text-lg font-semibold">
   {title}, {company}
   {
     inProgress && (
