--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -2,6 +2,6 @@
 const { class: className, id } = Astro.props;
 ---
 
-<section id={id} class={`w-full mx-auto lg:w-[740px] ${className}`}>
+<section id={id} class={`w-full mx-auto my-12 lg:w-[740px] ${className}`}>
   <slot />
 </section>
