--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,12 @@ import SectionContainer from "../components/SectionContainer.astro";
 import CodeIcon from "../components/icons/CodeIcon.astro";
 import JobIcon from "../components/icons/JobIcon.astro";
 import Projects from "../components/Projects.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout
   title="Adhemar's Porfolio - FullStack Developer"
-  description="This my website where I can show you how I work"
+  description="This is Adhemar's porfolio, a FullStack Developer. Here you can find information about his work experience, projects, and contact information."
 >
   <main class="px-3 lg:px-0">
     <SectionContainer class="pt-32 lg:pt-44 mt-0">
@@ -70,5 +71,6 @@ import Projects from "../components/Projects.astro";
       </h2>
       <Projects />
     </SectionContainer>
+    <Footer />
   </main>
 </Layout>
