--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Footer from "../components/Footer.astro";
           target="_blank"
           rel="noopener noreferrer"
           class="flex justify-center items-center"
-          ><Badge>Available to work</Badge></a
+          ><Badge>Working</Badge></a
         >
       </h1>
       <h2 class="text-white text-lg lg:text-2xl opacity-80 text-wrap">
