remove unnecessary imports

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -39,7 +39,7 @@ const PROJECTS = [
 ---
 
 {
-  PROJECTS.map(({ title, description, image, link, github, tags }) => (
+  PROJECTS.map(({ title, description, image, link, tags }) => (
     <article class="text-gray-400 my-5">
       <h3 class="text-blue-200 mb-1 text-md lg:text-lg font-semibold">
         {title}
